[package]
name = "ds18b20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
one-wire-bus = "0.1.1"
embedded-hal = { version="1.0.0-alpha.8", git = "https://github.com/rust-embedded/embedded-hal.git", features=["unproven"] }